# tauri-plugin-authium

./: Cargo.toml  README.md  build.rs  package.json
examples/tauri-app/: index.html  jsconfig.json  package.json  vite.config.js
examples/tauri-app/src/: app.vue
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs  server.rs  storage.rs  user.rs
