[package]
name = "tauri-plugin-authium"
version = "0.2.0-rc.0"
authors = [ "grcq" ]
description = "Plugin for Tauri as a wrapper for Authium."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-authium"
license = "MIT"

[dependencies]
tauri = { version = "2.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
actix-web = "4.11.0"
reqwest = { version = "0.12.22", features = ["json"]}
lazy_static = "1.5.0"
rand = "0.9.2"
once_cell = "1.21.3"
tauri-plugin-keychain = "2.0.2"
aes-gcm = "0.10.3"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
